--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
 torch >= 2.1.0
+timm >= 0.9.12
+pytorch-lightning >= 2.1.3
+torchvision >= 0.16.0
+torchmetrics >= 1.2.1
+numpy >= 1.26.0
+opendatasets >= 0.1.22
