--- a/docs/mkdocs.yaml
+++ b/docs/mkdocs.yaml
@@ -1,5 +1,5 @@
-site_name: {{ cookiecutter.project_name }}
-site_author: {{ cookiecutter.author_name }}
+site_name: project_winegrape
+site_author: JonatanRasmussen
 docs_dir: source
 
 theme:
