--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,19 +3,17 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = {{ cookiecutter.project_name|tojson }}
+name = "project_winegrape"
 version = "0.0.1"
-description = {{ cookiecutter.description|tojson }}
+description = ""
 authors = [
-  { name = {{ cookiecutter.author_name|tojson }}, email = "your@email.com" },
 ]
-{% if cookiecutter.open_source_license != 'No license file' %}license = { file = "LICENSE" }{% endif %}
 readme = "README.md"
-requires-python = ">={{ cookiecutter.python_version_number }}"
+requires-python = ">=3.10"
 dynamic = ["dependencies", "optional-dependencies"]
 
 [tool.setuptools]
-packages = ["{{cookiecutter.project_name}}"]
+packages = ["project_winegrape"]
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
