--- a/project_winegrape_src_files/conf/config1.yaml
+++ b/project_winegrape_src_files/conf/config1.yaml
@@ -6,12 +6,14 @@ data:
   transform_level: "light"
   batch_size: 32
   val_split: 0.2
+  num_workers: 6
 
 model:
   model_name: "efficientnet_b0" # or resnetv2_50t
   num_classes: 5
   drop_rate: 0.3
   pretrained: true
+
 
 optimization:
   lr_pretrained: 1e-5
@@ -20,7 +22,7 @@ optimization:
   criterion: "cross_entropy"
 
 training:
-  max_epochs: 40
+  max_epochs: 20
 
 logging:  
-  log_every_n_steps: 40
+  log_every_n_steps: 5
