--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,5 +16,6 @@ jobs:
         pip install -r requirements.txt
     - name: Test with pytest
       run: |
-        pip install pytest pytest-cov
-        pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+        pip install pytest coverage
+        coverage run -m pytest project_winegrape_src_files/tests/
+        coverage report -m
