--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-torch >= 2.1.0
-timm >= 0.9.12
-pytorch-lightning >= 2.1.3
-torchvision >= 0.16.0
-torchmetrics >= 1.2.1
-numpy >= 1.26.0
-opendatasets >= 0.1.22
-hydra-core >= 1.3.2
-pytest >= 7.4.4
-dvc >= 3.39.0
-dvc-gdrive >= 3.0.1
+click==8.1.7
+coverage==7.4.0
+dvc==3.39.0
+dvc-gdrive==3.0.1
+hydra-core==1.3.2
+kaggle==1.6.2
+Markdown==3.5.2
+numpy==1.26.3
+omegaconf==2.3.0
+opendatasets==0.1.22
+pytest==7.4.4
+pytorch_lightning==2.1.3
+timm==0.9.12
+torch==2.1.2
+torchmetrics==1.3.0
+torchvision==0.16.2
