--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,6 +17,12 @@ jobs:
         pip install -r requirements.txt
     - name: Test with pytest
       run: |
-        pip install pytest coverage
-        coverage run -m pytest project_winegrape_src_files/tests/
-        coverage report -m
+        coverage run -m pytest tests/
+        coverage html --title="DTU 02476 Group 100 Project Coverage Report"
+    - name: Upload pytest test results
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report
+        path: htmlcov/
+      # Use always() to always run this step to publish test results when there are test failures
+      if: ${{ always() }}
