--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ hydra-core >= 1.3.2
 pytest >= 7.4.4
 dvc >= 3.39.0
 dvc-gdrive >= 3.0.1
+dvc-gs >= 3.0.1
 wandb>=0.12.10
-requests>=2.31.0
+requests>=2.31.0 
 fastapi>=0.68.0,<0.69.0
 uvicorn>=0.15.0,<0.16.0
