--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
-click>=8.1.7
-coverage>=7.4.0
-kaggle>=1.6.2
-Markdown>=3.5.2
-omegaconf>=2.3.0
-torch >= 2.1.0
-timm >= 0.9.12
-pytorch-lightning >= 2.1.3
-torchvision >= 0.16.0
-torchmetrics >= 1.2.1
-numpy >= 1.26.0
-opendatasets >= 0.1.22
-hydra-core >= 1.3.2
-pytest >= 7.4.4
-dvc >= 3.39.0
-dvc-gdrive >= 3.0.1
-dvc-gs >= 3.0.1
-wandb>=0.12.10
-requests>=2.31.0 
-fastapi>=0.68.0,<0.69.0
+click==8.1.7
+fastapi==0.109.0
+hydra-core==1.3.2
+kaggle==1.6.2
+Markdown==3.5.2
+numpy==1.26.3
+omegaconf==2.3.0
+opendatasets==0.1.22
+Pillow==10.2.0
+pytorch_lightning==2.1.3
+timm==0.9.12
+torch==2.1.2
+torchmetrics==1.2.1
+torchvision==0.16.2
+coverage==7.4.0
+pytest==7.4.4
+dvc==3.39.0
+dvc-gdrive==3.0.1
+dvc-gs==3.0.1
+wandb==0.12.10
+requests==2.31.0 
 uvicorn>=0.15.0,<0.16.0
